11. Added support for top level timer in OpenMP [UCAR]
12. Added support for PAPI on BGL and XT3 [ANL, PSC]
13. Added support for converting TAU traces to profiles. 
14. Added support for converting TAU callpath profiles to phase profiles [LLNL].
15. Enhancements to Paraprof. 
16. Better support for Intel compilers for linking C and Fortran codes to TAU [NOAA]. 

Version 2.14 changes (from 2.13):
1. MPI-2 support and Fortran wrappers added. 
2. Support for Oracle database in PerfDMF. 
3. VTF support for multiple PAPI counters in Vampir/VTF format trace files. 
4. Improvements in Paraprof displays and database connectivity. 
5. Improvements in tau_compiler.sh to automatically instrument applications.
6. Added support for phase based profiling and dynamic timers. 
7. Introduced vtf2profile tool to get profiles from VTF3 traces.
8. Added histograms, full callgraph, not-normalized displays to paraprof. 
9. Added support for PathScale compilers and -exec-prefix option. 
10. Improved support for locking of performance data in multi-threaded apps. 
11. Added 3D displays in Paraprof.
12. Added support for SLOG2 traces (to use TAU with Jumpshot) [ANL]. 
13. Added bettter support for configuring for BG/L (-arch=bgl) [ANL].
14. Added support for depth limit profiling and tracing (-DEPTHLIMIT) [ORNL].
15. Changes to the MPI wrapper library (for S3D) [ORNL]. 
16. TAU_MPI_MESSAGE_SIZE now reports sizes for MPI_Send, Recv, Allreduce, etc.[ORNL].
17. Added support for Charm thread library [UIUC, LLNL].
18. Added support for gfortran compiler (-fortran=gfortran). 
19. Added support for reverse callpaths in paraprof [LLNL].
20. Added support for storing trials in paraprof [UTK].
21. Added support for user defined context events (callpaths) [ANL]. 
21. Added support for measuring memory headroom available (-PROFILEHEADROOM, examples/headroom) [ANL].
22. Added tau2elg trace conversion tool to convert to Epilog trace format [UTK].
23. Added search options to paraprof windows [LLNL]. 