@@ -26,6 +26,7 @@ Version 2.15 changes (from 2.14):
 14. Added support for converting TAU callpath profiles to phase profiles [LLNL].
 15. Enhancements to Paraprof. 
 16. Better support for Intel compilers for linking C and Fortran codes to TAU [NOAA]. 
+17. Added support for FreeBSD [ARL]. 
 
 Version 2.14 changes (from 2.13):
 1. MPI-2 support and Fortran wrappers added. 
